--- a/html/balance_game.html
+++ b/html/balance_game.html
@@ -15,9 +15,6 @@
                     <a href="http://seohanbook.co.kr/Picker/">홈</a>
                 </li>
                 <li>
-                    <a href="http://seohanbook.co.kr/Picker/html/balance_selection.html">벨런스 게임</a>
-                </li>
-                <li>
                     <a href="http://seohanbook.co.kr/Picker/html/login_check.html">벨런스 게임 만들기</a>
                 </li>
             </ul>
@@ -31,7 +28,9 @@
         </div>
         <div class="balance_main">
             <div class="q1" id="balance_main2">
-                질문
+                <div class="q_text">
+                    질문
+                </div>
                 <div class="choice_main">
                     <div class="choice1" id="choice3" onclick="test('yes', function (json) {console.log(json);});">
 
