--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="./css/Picker_index.css" />
+        <link rel="stylesheet" href="css/Picker_index.css" />
         <title>Picker</title>
     </head>
     <body>
@@ -11,10 +11,7 @@
             </div>
             <ul class="up_bar__menu">
                 <li>
-                    <a href="index.html">홈</a>
-                </li>
-                <li>
-                    <a href="./html/balance_selection.html">벨런스 게임</a>
+                    <a href="./index.html">홈</a>
                 </li>
                 <li>
                     <a href="http://seohanbook.co.kr/Picker/html/login_check.html">벨런스 게임 만들기</a>
@@ -28,50 +25,14 @@
                 </ul>
             </div>
         </div>
-        <div class="slideshow-container">
-            <div class="mySlides fade">
-                <div class="numbertext">1/2</div>
-                <img src="./pic/main/1.png" alt="image" class="slide_img">
-                <div class="text">
-                    <h3>사이버 세상의 새로운 가능성을 열어갑니다</h3>
-                    <span>-Picker- page 2 of 1</span>
-                </div>
-            </div>
-            <div class="mySlides fade">
-                <div class="numbertext">2/2</div>
-                <img src="./pic/main/2.png" alt="image" class="slide_img">
-                <div class="text">
-                    <h3>Picker</h3>
-                    <span>-Picker- page 2 of 2</span>
-                </div>
+        <div class="selections" id="selections1">
+            <div class="friend_line">
+                친구 리스트
             </div>
         </div>
-        <br>
-        <div>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
-        <div class="box">
-            Q&A
-            <br />
-            <br /> 
-            <div class="qq1">
-                Q.이곳은 뭐하는 곳인가요?
-                <br />
-                A.이곳은 밸런스게임을 등록하고 사람들의 생각을 공유하는 공간입니다
-            </div>
-            <br />
-            <div class="qq1">
-                Q.이곳이 만들어진 이유는 무엇인가요?
-                <br />
-                A.사람들의 생각을 공유하기위해 만든 공간입니다!
-            </div>
-            <br />
-            <div class="qq1">
-                즐겨주시길 바랍니다!
-            </div>
-        </div>
-        <script src="./js/img_slider.js"></script>
+        <script src="./js/new_balance_load.js">
+
+        </script>
         <script src="http://seohanbook.co.kr/Picker/js/sign_in.js"></script>
     </body>
 </html>
