--- a/html/balance_selection.html
+++ b/html/balance_selection.html
@@ -11,10 +11,7 @@
             </div>
             <ul class="up_bar__menu">
                 <li>
-                    <a href="../index.html">홈</a>
-                </li>
-                <li>
-                    <a href="../html/balance_selection.html">벨런스 게임</a>
+                    <a href="./html/balance_selection.html">홈</a>
                 </li>
                 <li>
                     <a href="http://seohanbook.co.kr/Picker/html/login_check.html">벨런스 게임 만들기</a>
