--- a/html/login.html
+++ b/html/login.html
@@ -9,17 +9,14 @@
     <body>
         <div class="up_bar">
             <div class="up_bar__logo">
-                <img src="http://seohanbook.co.kr/Picker/pic/favicon.png" class="logo">
+                <img src="../pic/main/favicon.png" class="logo">
             </div>
             <ul class="up_bar__menu">
                 <li>
-                    <a href="http://seohanbook.co.kr/Picker/">홈</a>
+                    <a href="../index.html">홈</a>
                 </li>
                 <li>
-                    <a href="http://seohanbook.co.kr/Picker/html/balance_selection.html">벨런스 게임</a>
-                </li>
-                <li>
-                    <a href="http://seohanbook.co.kr/Picker/html/balance_game_add.html">벨런스 게임 만들기</a>
+                    <a href="http://seohanbook.co.kr/Picker/html/login_check.html">벨런스 게임 만들기</a>
                 </li>
             </ul>
             <div class="up_bar__link">
